# rehor

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.runner  OPERATIONS.md  README.md  SETUP.md  docker-compose.yml  entrypoint.sh  pyproject.toml  renovate.json
.claude/skills/: memory_mcp.py  paths.py
.claude/skills/auto-fork/: auto_fork.py
.claude/skills/auto-fork/tests/: conftest.py  test_operations.py
.claude/skills/claim-ticket/: .gitignore  README.md  SKILL.md
.claude/skills/claim-ticket/scripts/: claim_ticket_operations.py  constants.py
.claude/skills/claim-ticket/tests/: conftest.py  test_integration.py  test_operations.py
.claude/skills/new-work/: new_work.py
.claude/skills/post-pr/: .gitignore  README.md  SKILL.md  post_pr.py  pyproject.toml
.claude/skills/post-pr/scripts/: __init__.py  post_pr_operations.py
.claude/skills/post-pr/tests/: __init__.py  test_integration.py  test_operations.py  test_wrapper.py
.claude/skills/slack-notify/: slack_notify.py
.claude/skills/triage/: triage.py
.claude/skills/wrap-up/: wrap_up.py
.tekton/: platform-frontend-ai-dev-memory-server-pull-request.yaml  platform-frontend-ai-dev-memory-server-push.yaml  platform-frontend-ai-dev-proxy-pull-request.yaml  platform-frontend-ai-dev-proxy-push.yaml  platform-frontend-ai-dev-pull-request.yaml  platform-frontend-ai-dev-push.yaml
bot/: agent.py  config.py  preflight.py  run.py  slack_digest.py  transcripts.py
bot/tests/: test_gh_pr_status.py  test_install_skills.py  test_jira_kanban_preflight.py  test_jira_sprint_preflight.py  test_manifest.py  test_multi_profile.py  test_preflight.py  test_preflight_shared.py  test_slack_digest_cmd.py  test_slack_digest_runner.py
dashboard/: package-lock.json  package.json  tsconfig.tsbuildinfo
dashboard/src/: App.css  App.tsx  api.ts  types.ts
dashboard/src/components/: CycleRunCard.tsx
dashboard/src/pages/: CycleRuns.tsx
deploy/: template.yaml
dev-proxy/: go.mod  go.sum  start-proxy.sh
dev-proxy/rh_identity_transform/: go.mod  go.sum
docs/: bot-workflow-loop.md  git-auth-proxy.md  onboarding-new-instance.md  presets-design.md  scheduling.md
docs/presets/: custom-preflight.md  custom-workflows.md
memory-server/bot_memory_server/: api.py
memory-server/bot_memory_server/tools/: slack.py  tasks.py
memory-server/src/: api.py  server.py
memory-server/tests/: conftest.py  test_costs_and_analytics.py  test_cycle_runs.py  test_cycle_runs_regression.py  test_db_migration.py  test_read_switchover.py  test_slack_digest.py
presets/: conftest.py  install-envs.sh
presets/core/: CLAUDE.md
presets/envs/browser/: install.sh
presets/envs/container-scan/: install.sh
presets/envs/container-scan/entrypoint.d/: 10-buildah-config.sh
presets/envs/dev-proxy/: install.sh
presets/envs/go/: install.sh
presets/envs/node/: install.sh
presets/envs/patternfly-mcp/: install.sh
presets/envs/slack/: manifest.yaml
presets/shared/preflight/: common.py  gh_pr_status.py  gl_mr_status.py  jira_kanban_preflight.py  jira_sprint_preflight.py
presets/workflows/jira-kanban/: CLAUDE.md  manifest.yaml
presets/workflows/jira-kanban/preflight/: 01-gh-pr-status.py  02-gl-mr-status.py  03-jira-kanban.py
presets/workflows/jira-sprint/: CLAUDE.md  manifest.yaml
presets/workflows/jira-sprint/preflight/: 03-jira-sprint.py
proxy/: Dockerfile
tests/: test_transcripts.py
