[project]
name = "dev-bot"
version = "0.1.0"
description = "Autonomous developer bot using Claude Agent SDK"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk",
    "filelock",
    "httpx",
    "python-dotenv",
    "pyyaml>=6.0",
    "zstandard>=0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pre-commit",
    "httpx>=0.27.0",
    "mcp>=1.1.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[project.scripts]
dev-bot = "bot.run:main"

[tool.pytest.ini_options]
testpaths = [
    "bot/tests",
    "presets/shared/skills/auto-fork/tests",
    "presets/shared/skills/post-pr/tests",
    "presets/shared/skills/push-and-pr/tests",
    "presets/workflows/jira-sprint/skills/claim-ticket/tests",
    "presets/workflows/jira-kanban/skills/claim-ticket/tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --strict-config --tb=short --import-mode=importlib"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4"]

[tool.ruff.lint.per-file-ignores]
"*/tests/*" = ["E501"]

[tool.uv.workspace]
members = ["memory-server"]
